cmake_minimum_required(VERSION 3.29)
project(Practice_224013)

set(CMAKE_CXX_STANDARD 20)

add_executable(Practice_224013
#        CPP/OOP/Student.cpp
#        CPP/OOP/Classes.cpp
#        CPP/exception/exception_demo1.cpp
#        CPP/OOP/test.cpp
#        CPP/OOP/inheritance/demo1.cpp
#        CPP/OOP/package/demo1.cpp
#        CPP/OOP/polymorphism/demo.cpp
        CPP/OOP/abstraction/demo.cpp
        #        CPP/OOP/Employee.cpp
        #        CPP/io_demo.cpp
)
